# capscan-mcp

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
skills/capscan-audit/: SKILL.md
src/: lib.rs  main.rs
tests/: protocol.rs
