[package]
name = "capscan-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server exposing capscan's crate capability scanning (scan/diff/audit) as tools for AI coding agents."
license = "MIT OR Apache-2.0"

[dependencies]
capscan = "0.1"
rmcp = { version = "2.2", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
rmcp = { version = "2.2", features = ["client"] }
